--- a/assets/css/index.scss
+++ b/assets/css/index.scss
@@ -3,9 +3,14 @@
 
 @import 'common';
 
+// no margin for the first section
+#container .section:first-child h2 {
+    margin-top: 0;
+}
+
 h1 {
     font-size: 2.5rem;
-    margin-bottom: 50px;
+    margin: 30px 0;
 }
 
 h2 {
@@ -29,40 +34,30 @@ $hard-swap-margin: 100px;
 }
 
 @media (min-width: $one-column-width) {
-     body {
-        margin: 0 auto;
-        width: $one-column-width;
-     }
-
      #container {
-         .section > p, .section > dl {
+        width: $one-column-width;
+        margin: 0 auto;
+
+        .section > p, .section > dl {
              padding-left: 40px;
          }
      }
 }
 
 @media (min-width: $two-column-width) {
-    body {
-        width: $two-column-width - $hard-swap-margin;
-    }
-
     #container {
+        width: $two-column-width - $hard-swap-margin;
         column-count: 2;
         column-gap: 10px;
 
         .section {
             break-inside: avoid;
         }
-
-        // no margin for the first section
-        .section:first-child h2 {
-            margin-top: 0;
-        }
     }
 }
 
 @media (min-width: $two-column-width-large) {
-    body {
+    #container {
         width: $two-column-width-large - $hard-swap-margin;
     }
 }
